--- a/Primer Taller/Métodos_Taller1.ipynb
+++ b/Primer Taller/Métodos_Taller1.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 3,
       "metadata": {
         "id": "tg2oJgkMOnU2"
       },
@@ -727,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -735,28 +735,61 @@
         "id": "PP8E7S6bY0td",
         "outputId": "626a6ecd-1d7e-422f-c4a1-309b675fdfe2"
       },
+      "outputs": [],
+      "source": [
+        "def Function(x):\n",
+        "    return (3*(x**5) + 5*(x**4) - x**3)\n",
+        "  \n",
+        "def Derivate(f,x,h=1e-4):\n",
+        "    return (f(x+h)-f(x-h))/(2*h)\n",
+        "  \n",
+        "def GetNewtonRaphson(f,df,xn,itmax = 1000, precision=1e-5):\n",
+        "    error = 1\n",
+        "    it = 0\n",
+        "\n",
+        "    while error > precision and it <= itmax:\n",
+        "        try:\n",
+        "            xn1 = xn - f(xn)/df(f,xn)\n",
+        "            error = np.abs(f(xn)/df(f,xn))\n",
+        "        except ZeroDivisionError:\n",
+        "            print('Division por cero')\n",
+        "        it += 1\n",
+        "        xn = xn1\n",
+        "    \n",
+        "    if it == itmax:\n",
+        "        False\n",
+        "    else:\n",
+        "        return xn\n",
+        "      \n",
+        "def GetAllRoots(x,tolerancia=4):\n",
+        "    Roots = np.array([])\n",
+        "    for i in x:\n",
+        "        root = GetNewtonRaphson(Function,Derivate,i)\n",
+        "        if root != False:\n",
+        "            croot = np.round(root, tolerancia)\n",
+        "            if croot not in Roots:\n",
+        "                Roots = np.append(Roots,croot)\n",
+        "    Roots.sort()\n",
+        "    return Roots"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[0.0]\n"
+            "[-1.8471 -0.      0.1805]\n"
           ]
         }
       ],
       "source": [
-        "x = np.linspace(0,100000,200)\n",
-        "roots = []\n",
-        "\n",
-        "def Derivate(x):\n",
-        "  return (15*(x**4) + 20*(x**3) - 3*(x**2))\n",
-        "\n",
-        "for i in x:\n",
-        "  if Derivate(i) == 0:\n",
-        "    roots.append(i)\n",
-        "\n",
-        "print(roots)\n",
-        "  "
+        "x = np.linspace(-2,2,100)\n",
+        "Roots = GetAllRoots(x)\n",
+        "print(Roots)"
       ]
     }
   ],
@@ -765,7 +798,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -779,11 +812,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.9.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "0af4f2c9c0a2840e15ec1e3955baa2d8289022cf6ae1d6cc05b182c20ed9389b"
+        "hash": "ad307bde91f31e4b718ec0c2fe9a8b9cebe22b2862231a694138fcba204f6685"
       }
     }
   },
