--- a/Primer Taller/Métodos_Taller1.ipynb
+++ b/Primer Taller/Métodos_Taller1.ipynb
@@ -715,6 +715,95 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "x = np.linspace(-4,4,25)\n",
+        "y = np.linspace(-4,4,25)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**b)** Definir la función potencial del flujo dada por:\n",
+        "\n",
+        "$$\\phi(x,y) = Vx (1 - \\frac{R^2}{x^2 + y^2})$$\n",
+        "\n",
+        "donde V = 2 cm/s."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def Function(x,y):\n",
+        "  return (2*x)*(1 - (4 / (x**2 + y**2)))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**c)** Calcule y guarde adecuadamente el campo de velocidades usando la definición de\n",
+        "derivada parcial central como:\n",
+        "\n",
+        "$$ v_x = $$\n",
+        "$$ v_y = $$\n",
+        "\n",
+        "use h = 0.001. Note que al interior del cilindro el campo de velocidades debe ser igual\n",
+        "a cero."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Derivadas parciales con las definiciones dadas\n",
+        "h = 0.001\n",
+        "def Vx(x,y):\n",
+        "  if h != 0:\n",
+        "    return (Function(x+h,y) - Function(x-h,y)) / (2*h)\n",
+        "\n",
+        "def Vy(x,y):\n",
+        "  if h != 0:\n",
+        "    return (Function(x,y+h) - Function(x,y-h)) / (2*h)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[-7999998.0, 0.0], [1.9999979999999473, 3.9999999999988933], [1.9999998749997694, 0.9999999999998899], [1.9999999753084197, 0.44444444444424747], [1.9999999921878064, 0.25000000000030553], [1.999999996800561, 0.16000000000016001], [1.9999999984570138, 0.11111111111183902], [1.9999999991675566, 0.08163265306126988], [1.9999999995121698, 0.06250000000029843], [1.9999999996951345, 0.04938271604970623], [1.9999999997981632, 0.04000000000026205], [1.999999999862112, 0.03305785124041449], [1.9999999999029683, 0.027777777777515666], [1.9999999999296136, 0.023668639052232265], [1.9999999999456008, 0.020408163264207246], [1.9999999999598117, 0.017777777777894244], [1.9999999999686935, 0.015624999999630518], [1.9999999999775753, 0.01384083044797535], [1.9999999999846807, 0.012345679014202915], [1.9999999999882334, 0.011080332409818539], [1.9999999999917861, 0.010000000003174137], [1.9999999999917861, 0.009070294783697364], [1.9999999999917861, 0.00826446280655091], [1.9999999999953388, 0.007561436671466026], [1.9999999999953388, 0.006944444447043452], [1.9999999999953388, 0.006400000000184036]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "Parcial_Derivates = []\n",
+        "i = 0\n",
+        "j = 0\n",
+        "while i<=25 and j<=25:\n",
+        "    Parcial_Derivates.append([Vx(i,j),Vy(i,j)])\n",
+        "    i+=1\n",
+        "    j+=1\n",
+        "\n",
+        "print(Parcial_Derivates)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "G5d8AKo1XKbi"
