--- a/Primer Taller/Métodos_Taller1.ipynb
+++ b/Primer Taller/Métodos_Taller1.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "tg2oJgkMOnU2"
       },
@@ -816,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -859,26 +859,25 @@
         "            if croot not in Roots:\n",
         "                Roots = np.append(Roots,croot)\n",
         "    Roots.sort()\n",
-        "    return Roots"
+        "    print (\"Las raíces reales del polinomio son {}\".format(Roots))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[-1.8471 -0.      0.1805]\n"
+            "Las raíces reales del polinomio son [-1.8471 -0.      0.1805]\n"
           ]
         }
       ],
       "source": [
         "x = np.linspace(-2,2,100)\n",
-        "Roots = GetAllRoots(x)\n",
-        "print(Roots)"
+        "Roots = GetAllRoots(x)"
       ]
     }
   ],
